--- a/index.html
+++ b/index.html
@@ -439,6 +439,10 @@ identifiant2	classe2
 
             <div class="settings">
                 <div class="form-group">
+                    <label for="longueur">Longueur</label>
+                    <input type="number" id="longueur" value="12" min="6" max="32">
+                </div>
+                <div class="form-group">
                     <label>
                         <input type="checkbox" id="inclureMajuscules" checked> Majuscules (A-Z)
                     </label>
